<resources>
    <string name="app_name">F1 App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_deleting">"Error while deleting"</string>
    <string name="deleted">Successfully deleted</string>
    <string name="undo">Undo</string>
    <string name="added">Successfully added</string>
    <string name="error_adding">Error while adding</string>
    <string name="updated">Successfully updated</string>
    <string name="error_updating">Error while updating</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="team">Team</string>
    <string name="add_performance">add performance</string>
    <string name="performance">Performance</string>
    <string name="driver">Driver</string>
    <string name="race">Race</string>
    <string name="position">Position</string>
    <string name="fastest_lap">Fastest Lap</string>
    <string name="track">Track</string>
    <string name="date">Date</string>
    <string name="car">Car</string>
    <string name="preName">Name:</string>
    <string name="paco">Paco</string>
    <string name="preNumber">Number:</string>
    <string name="_14">14</string>
    <string name="preTeam">Team:</string>
    <string name="aston_martin">Aston Martin</string>
    <string name="preTrack">Track:</string>
    <string name="textview">TextView</string>
    <string name="preDate">Date:</string>
    <string name="preCar">Car:</string>
    <string name="preHashtag">#:</string>
    <string name="_1">1</string>
    <string name="prePosition">Position:</string>
    <string name="_1_23_456">1:23.456</string>
    <string name="delete">delete</string>
    <string name="add">add</string>
    <string name="go_to_admin_screen">Go to Admin screen</string>
    <string name="admin">admin</string>
    <string name="go_to_user_screen">Go to User screen</string>
    <string name="user">user</string>
    <string name="teams">teams</string>
    <string name="drivers">drivers</string>
    <string name="races">races</string>
</resources>