<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pantalla.admin.detail.performance.EditPerformanceFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdownDriver"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideRight"
        app:layout_constraintStart_toStartOf="@+id/guideLeft"
        app:layout_constraintTop_toTopOf="@+id/guideTop"
        app:startIconDrawable="@drawable/piloto_icon_24">

        <AutoCompleteTextView
            android:id="@+id/textDriver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/driver"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdownRace"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="@id/guideRight"
        app:layout_constraintStart_toStartOf="@+id/guideLeft"
        app:layout_constraintTop_toBottomOf="@+id/dropdownDriver"
        app:startIconDrawable="@drawable/race_icon_24">

        <AutoCompleteTextView
            android:id="@+id/textRace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/race"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldPos"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/position"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="@id/guideRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideLeft"
        app:layout_constraintTop_toBottomOf="@id/dropdownRace"
        app:startIconDrawable="@drawable/ic_numbers_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textPos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldFL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/fastest_lap"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="@id/guideRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideLeft"
        app:layout_constraintTop_toBottomOf="@id/textFieldPos"
        app:startIconDrawable="@drawable/ic_timer_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFastestLap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />
</androidx.constraintlayout.widget.ConstraintLayout>